--- a/posts/2024-01-02.md
+++ b/posts/2024-01-02.md
@@ -4,6 +4,7 @@ This past year Team Materialize struck out to do each day of 2023's [Advent of C
 We figured we'd try and use SQL for the whole thing.
 
 SQL is a bold choice because it is meant for querying data, and not as much for general computation.
+Several of the problems call for interesting algorithms, specific data structures, and some flexibility.
 However, Materialize's core thesis is that you can do so much more with SQL that just query your data.
 If you want to move operational logic from bespoke code into SQL, you'll need to be able to express that logic.
 And so, Advent of Code was a great opportunity to stretch our legs, and fingers, and see just how much logic fits into SQL.
@@ -16,9 +17,9 @@ We aren't going to recount each of the problems, the whimsical backstories, and 
 We'll try and flag some surprising moments, though, and you should dive into those problems if you are keen (they can each be done on their own).
 
 I (Frank) wrote all of my solutions using Materialize's `WITH MUTUALLY RECURSIVE` even when recursion was not required.
-This just helped me start writing, as the blocks allow you to start naming subqueries and writing SQL.
+This just helped me start writing, as the blocks allow you to just start naming subqueries and writing SQL.
 
-My solutions largely had the same skeletal structure:
+My solutions all had the same skeletal structure:
 ```sql
 WITH MUTUALLY RECURSIVE
 
@@ -113,21 +114,21 @@ The only bummer here was the amount of copy/paste re-use, as each of the four ca
 ### Week three
 
 [Day fifteen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1215.md) has you implement a hash function, and then a hash map.
-Recursion was a handy way to walk through the input to be hashed, though the hash function was simple enough that you could have used math instead. 
+Recursion was a handy way to walk through the input to be hashed, though the hash function was simple enough that you could have used math directly instead. 
 The second part (the hash map) did not require recursion, as rather than simulate the operations you could leap to the final state you were looking for.
 
 [Day sixteen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1216.md) was about bouncing light around in a grid, and seeing how many grid cells are illuminated.
 The illumination process was classic recursive SQL, where you keep expanding `(row, col, dir)` triples until the set reaches a fixed point.
-In the second part the light sources had an origin, which is just a fourth column to add.
+In the second part the light sources had an origin, which is just a fourth column to add, tracking the source of each ray of light.
 
 [Day seventeen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1217.md) is a pathfinding problem, with constraints on how you move around the path (not too short or too long in any direction at once).
 Classic recursive SQL to implement [Bellman-Ford](https://en.wikipedia.org/wiki/Bellman–Ford_algorithm).
 
-[Day eighteen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1218.md) provides instructions of how a digger will move around, escavating earth, and asks you to calculate the area.
+[Day eighteen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1218.md) provides instructions of how a digger will move around, excavating earth, and asks you to calculate the area.
 This is an opportunity to learn about the [Trapezoid formula](https://en.wikipedia.org/wiki/Shoelace_formula#Trapezoid_formula) for computing the area as the addition and subtraction of trapezoid areas.
 
 [Day nineteen](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1219.md) sneakily introduces you to [binary space partitioning](https://en.wikipedia.org/wiki/Binary_space_partitioning), where rules based on inequality tests route you to new rules, until eventually you reach some rule that says "accept" or "reject".
-This was all pretty easy, except for a substantial amount of SQL overhead related to the various symbols and characters and coordinates all of required their own columns.
+This was all pretty easy, except for a substantial amount of SQL overhead related to the various symbols and characters and coordinates all of which required their own columns.
 
 [Day twenty](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week3/aoc_1220.md) presents you with the simulation of an asynchronous circuit, and this is the day that almost broke me.
 Mechanically the SQL isn't that complicated, but *debugging* the SQL was a real challenge.
@@ -150,8 +151,38 @@ Part one was a mostly vanilla recursive SQL query, and part two encoded the 32 p
 
 [Day twenty-four](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week4/aoc_1224.md) had most folks reach for a numerical solver, something like Mathematica or z3.
 That is less easy in SQL, and I needed to learn some math instead (specifically how to find the intersection of two line segments).
-Although part two seemed quite complex, it ended up being relatively easy when you realize a few simplifications (the added dimension can be ignored until the end, allowing you to re-use part one).
+Although part two seemed quite complex, it ended up being relatively easy when you realize a few simplifications (an added dimension that can be ignored until the end, allowing you to re-use part one).
 
-[Day twenty-five](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week4/aoc_1225.md) asked for a minimum cut (of three edges).
+[Day twenty-five](https://github.com/MaterializeInc/advent-of-code-2023/blob/main/week4/aoc_1225.md) asked for a minimum graph cut (of three edges).
 This is a standard optimization problem, but rather than try to implement the [Stoer-Wagner algorithm](https://en.wikipedia.org/wiki/Stoer–Wagner_algorithm) I went with something from my PhD thesis: partitioning the graph based on the [Fiedler vector](https://en.wikipedia.org/wiki/Algebraic_connectivity#Fiedler_vector).
 It turns out this gave the right answer on the first try, and the holidays were saved!
+
+## Conclusions
+
+The exercise was certainly helpful and informative, on multiple levels.
+
+First, it really reinforced for me that `WITH MUTUALLY RECURSIVE` is a very valuable tool to have access to when faced with a new problem.
+Often your problem is a bunch of joins and reductions, but when it isn't you are immediately in a bit of a pickle.
+In most cases, algorithmic challenges immediately gave way to recursive SQL.
+
+That being said, there's clearly an accessibility gap when reaching for recursive SQL.
+I find the idioms approachable, but I've spent a while working with data-parallel algorithms, and have seen several of the tricks.
+There's still plenty of work to do before the casual SQL author feels comfortable with recursive SQL.
+
+Second, the majority of my time was spent *debugging* rather than authoring.
+This is a classic challenge with declaritive languages, who go from input program to output data in often inscrutable ways.
+I borrowed some techniques from [debugging Datalog](https://yanniss.github.io/DeclarativeDebugging.pdf), but ideally the system itself would help me with this (and several research systems do provide integrated lineage).
+
+Debugging the logic of SQL queries only gets harder when the data are changing underneath you.
+Techniques like spot checking data become infeasible when the data changes faster than you can observe records that are meant to line up.
+Materialize should help in these cases, with maintained diagnostic views that represent assertions, or better violations thereof, whose contents spell out records that at some moment violated something that was meant to be true.
+Materialize's `SUBSCRIBE` provides a full account of these views, reporting records that existed even for a moment, where anything other than "always empty" represents an error in your SQL (or your assertions).
+
+Third, using Materialize in new and weird ways shook out several bugs.
+We've already fixed them.
+Dogfooding your own product, especially in surprising contexts, is a great way to forcibly increase your test coverage.
+Issues ranged from the silly ("why would you name a table `count`?") to the abstruse (doubly nested recursive SQL blocks), but they spilled out in the early days and became less frequent as the weeks went on.
+
+Finally, the main conclusion was that it was all possible.
+Despite substantial anxiety about whether and when we would need to bail out, defeated, the whole project did work out.
+We were able to express a rich variety of computational tasks as data-driven SQL both expressed and maintained by Materialize.
